# deedsBCV

./: .travis.yml  CMakeLists.txt  appveyor.yml  deeds-dev-requirements.yml
src/: CMakeLists.txt  MINDSSCbox.h  applyBCV.cpp  applyBCVfloat.cpp  deedsBCV0.cpp  deeds_config.h  linearBCV.cpp  parseArguments.h  primsMST.h  regularisation.h
